framec/tests/snapshots/kotlin_snapshots__linear_fsm.snap
---
source: framec/tests/kotlin_snapshots.rs
expression: "compile_fixture(\"01_linear_fsm\", \"kotlin\")"
---
class LinearFsmFrameEvent(val _message: String, val _parameters: MutableList<Any?> = mutableListOf())

class LinearFsmFrameContext(val _event: LinearFsmFrameEvent, var _return: Any? = null) {
    val _data: MutableMap<String, Any?> = mutableMapOf()
    var _transitioned: Boolean = false
}

class LinearFsmCompartment(val state: String) {
    val state_args: MutableList<Any?> = mutableListOf()
    val state_vars: MutableMap<String, Any?> = mutableMapOf()
    val enter_args: MutableList<Any?> = mutableListOf()
    val exit_args: MutableList<Any?> = mutableListOf()
    var forward_event: LinearFsmFrameEvent? = null
    var parent_compartment: LinearFsmCompartment? = null

    fun copy(): LinearFsmCompartment {
        val c = LinearFsmCompartment(this.state)
        c.state_args.addAll(this.state_args)
        c.state_vars.putAll(this.state_vars)
        c.enter_args.addAll(this.enter_args)
        c.exit_args.addAll(this.exit_args)
        c.forward_event = this.forward_event
        c.parent_compartment = this.parent_compartment
        return c
    }
}

class LinearFsm {
    private var _state_stack: MutableList<LinearFsmCompartment>
    private var __compartment: LinearFsmCompartment
    private var __next_compartment: LinearFsmCompartment?
    private var _context_stack: MutableList<LinearFsmFrameContext>
    var total: Int = 0

    init {
        _state_stack = mutableListOf()
        _context_stack = mutableListOf()
        this.__compartment = __prepareEnter("Idle", mutableListOf<Any?>(), mutableListOf<Any?>())
        this.__next_compartment = null
    }

    fun __frame_init() {
        val __e = LinearFsmFrameEvent("$>", __compartment.enter_args)
        val __ctx = LinearFsmFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(__e)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    private fun hsm_chain(): Map<String, List<String>> {
        return mapOf(
            "Idle" to listOf("Idle"),
            "Active" to listOf("Active"),
            "Done" to listOf("Done"),
        )
    }
    private fun __prepareEnter(leaf: String, state_args: MutableList<Any?>, enter_args: MutableList<Any?>): LinearFsmCompartment {
        var comp: LinearFsmCompartment? = null
        for (name in hsm_chain()[leaf]!!) {
            val new_comp = LinearFsmCompartment(name)
            new_comp.state_args.addAll(state_args)
            new_comp.enter_args.addAll(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!!
    }

    private fun __prepareExit(exit_args: MutableList<Any?>) {
        var comp: LinearFsmCompartment? = __compartment
        while (comp != null) {
            comp.exit_args.clear()
            comp.exit_args.addAll(exit_args)
            comp = comp.parent_compartment
        }
    }

    private fun __kernel(__e: LinearFsmFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            val next_compartment: LinearFsmCompartment = __next_compartment!!
            __next_compartment = null
            // Exit the current (leaf) state.
            val exit_event = LinearFsmFrameEvent("<$", __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            val forward_event: LinearFsmFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = null
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                val enter_event = LinearFsmFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
            } else if (forward_event._message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                val enter_event = LinearFsmFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
                __router(forward_event)
            }
            for (ctx in _context_stack) {
                ctx._transitioned = true
            }
        }
    }

    private fun __router(__e: LinearFsmFrameEvent) {
        if (__compartment.state == "Idle") {
            _state_Idle(__e, __compartment)
        } else if (__compartment.state == "Active") {
            _state_Active(__e, __compartment)
        } else if (__compartment.state == "Done") {
            _state_Done(__e, __compartment)
        }
    }

    private fun __transition(next: LinearFsmCompartment) {
        __next_compartment = next
    }

    fun start() {
        val __e = LinearFsmFrameEvent("start", mutableListOf())
        val __ctx = LinearFsmFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(_context_stack[_context_stack.size - 1]._event)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    fun progress(amount: Int) {
        val __e = LinearFsmFrameEvent("progress", mutableListOf(amount))
        val __ctx = LinearFsmFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(_context_stack[_context_stack.size - 1]._event)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    fun finish() {
        val __e = LinearFsmFrameEvent("finish", mutableListOf())
        val __ctx = LinearFsmFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(_context_stack[_context_stack.size - 1]._event)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    private fun _state_Idle(__e: LinearFsmFrameEvent, compartment: LinearFsmCompartment) {
        if (__e._message == "start") {
            this._s_Idle_hdl_user_start(__e, compartment)
            return
        }
    }

    private fun _state_Active(__e: LinearFsmFrameEvent, compartment: LinearFsmCompartment) {
        if (__e._message == "finish") {
            this._s_Active_hdl_user_finish(__e, compartment)
            return
        }
        if (__e._message == "progress") {
            this._s_Active_hdl_user_progress(__e, compartment)
            return
        }
    }

    private fun _state_Done(__e: LinearFsmFrameEvent, compartment: LinearFsmCompartment) {

    }

    private fun _s_Idle_hdl_user_start(__e: LinearFsmFrameEvent, compartment: LinearFsmCompartment) {
        val __compartment = __prepareEnter("Active", mutableListOf<Any?>(), mutableListOf<Any?>())
        __transition(__compartment)
        return
    }

    private fun _s_Active_hdl_user_finish(__e: LinearFsmFrameEvent, compartment: LinearFsmCompartment) {
        val __compartment = __prepareEnter("Done", mutableListOf<Any?>(), mutableListOf<Any?>())
        __transition(__compartment)
        return
    }

    private fun _s_Active_hdl_user_progress(__e: LinearFsmFrameEvent, compartment: LinearFsmCompartment) {
        val amount = __e._parameters[0] as Int
        // self mutation exercised below via domain field
        self.total = self.total + amount
    }

    companion object {
        @JvmStatic fun __create(): LinearFsm {
            val c = LinearFsm()
            c.__frame_init()
            return c
        }    }
}
